# openfmb.adapters

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.buildx  Dockerfile.ubuntu  README.md  all-gnu.nix  all.nix  astyle.cfg  conanfile.txt  default.nix  dep_licenses.md  docker.nix
adapter-api/: CMakeLists.txt
adapter-api/include/adapter-api/: ConfigStrings.h  Exception.h  IEventSource.h  IMessageBus.h  IPlugin.h  IPluginFactory.h  IProfileHandler.h  IPublisher.h  ISubscriber.h  ISubscriptionHandler.h  Logger.h  Profile.h  ProfileHelpers.h  ProfileInfo.h  ProfileMode.h  ProfileRegistry.h  StringUtil.h  Version.h
adapter-api/proto/: ResourceReadingProfile.proto
adapter-api/proto/commonmodule/: AnalogueValue.proto  BCR.proto  CMV.proto  DEL.proto  ENG_CalcMethodKind.proto  IdentifiedObject.proto  MV.proto  MeasurementIED.proto  ReadingMMTR.proto  ReadingMMXU.proto  ResourceReadingValue.proto  Unit.proto  UnitMultiplierKind.proto  UnitSymbolKind.proto  Vector.proto  WYE.proto
adapter-api/src/: IMessageBus.cpp  IProtoBus.h  Profile.cpp  ProfileMode.cpp  Version.cpp
adapter-api/src/adapter-api/: ConfigStrings.h  IAdapter.h  IAdapterFactory.h  IMessageBus.cpp  IMessageBus.h  IPlugin.h  IPluginFactory.h  IProfileHandler.h  IProfileReader.h  IProfileWriter.h  IProtoPublishers.h  IProtoSubscribers.h  IPublisher.h  ISubscriber.h  Logger.h  Profile.cpp  Profile.h  ProfileMode.cpp  ProfileMode.h  ProfileNames.h  TypeDefinitions.h  Version.cpp  Version.h
adapter-api/src/config/: Accessor.h  AccessorImpl.h  CommandPriorityMap.cpp  ConfigWriteVisitorBase.cpp  DescriptorPath.cpp  DescriptorPathImpl.h  FieldInfo.cpp  FieldInfo.h  MessageInformation.cpp  ProfileType.cpp  YAMLGetters.cpp
adapter-api/src/util/: EnumUtil.cpp  Time.cpp  YAMLTemplate.cpp  YAMLUtil.cpp
adapter-api/test/: CMakeLists.txt
adapter-api/test/src/: test_config_accessor.cpp  test_field_handlers.cpp  test_proto_deserialization.cpp  test_yaml_override_parsing.cpp
adapter-util/: CMakeLists.txt
adapter-util/include/adapter-util/: ConfigStrings.h  ProfileInfo.h  Version.h
adapter-util/src/: Version.cpp
adapter-util/src/config/: AccessorImpl.h  CommandPriorityMap.cpp  ConfigWriteVisitorBase.cpp  DefaultConfigWriter.cpp  DescriptorPath.cpp  FieldInfo.cpp  SchemaWriteVisitorBase.cpp  SubjectNameSuffix.cpp  YAMLGetters.cpp
adapter-util/src/schedule/: ScheduleSplit.cpp  ScheduleSplit.h
adapter-util/src/util/: Time.cpp  YAMLTemplate.cpp  YAMLUtil.cpp
adapter-util/test/: CMakeLists.txt
adapter-util/test/src/: main.cpp  test_config_accessor.cpp  test_field_handlers.cpp  test_proto_change_filter.cpp  test_proto_deserialization.cpp  test_proto_set_and_get.cpp  test_schedule_executor.cpp  test_schedule_splitting.cpp  test_time_conversion.cpp  test_yaml_override_parsing.cpp
adapters/dds/twinoaks/: CMakeLists.txt
adapters/dnp3/: CMakeLists.txt
adapters/log/: CMakeLists.txt
adapters/msg-logger/: CMakeLists.txt
adapters/nats/: CMakeLists.txt
application/: CMakeLists.txt  example.yaml  example_config.old.yaml
application/src/: AdapterRegistry.cpp  AdapterRegistry.h  ArgumentParser.cpp  ArgumentParser.h  ConfigKeys.h  ConfigStrings.h  FileInfo.cpp  FileInfo.h  LoggerConfig.cpp  LoggerConfig.h  MessageBus.cpp  MessageBus.h  PluginRegistry.cpp  PluginRegistry.h  ProtoBus.cpp  ProtoBus.h  Shutdown.h  SubscriberRegistry.h  SubscriptionRegistry.h  main.cpp
application/test/: CMakeLists.txt
dds_types/: CMakeLists.txt
dds_types/src/: OpenFMB.cc  OpenFMB.hh  OpenFMB.idl  OpenFMBDataReader.cc  OpenFMBDataReader.hh  OpenFMBDataWriter.hh  OpenFMBTypeSupport.cc  OpenFMBTypeSupport.hh
plugins/capture/: CMakeLists.txt
plugins/capture/src/: ConfigStrings.h  Plugin.cpp  Plugin.h  PluginFactory.cpp
plugins/dds/rti/: CMakeLists.txt  README.md  main.cpp
plugins/dnp3/: CMakeLists.txt
plugins/dnp3/test/: CMakeLists.txt  test_command_ordering.cpp
plugins/goose/: CMakeLists.txt
plugins/goose/src/: BuildingFunction.h  ConfigStrings.h  ControlBlockListener.cpp  ControlBlockListener.h  GooseMessageVisitor.cpp  GooseMessageVisitor.h  GoosePath.cpp  GoosePath.h  GooseStructureConfigVisitor.cpp  GooseStructureConfigVisitor.h  IPublishConfigBuilder.h  Mappings.h  MeasurementConfigWriteVisitor.cpp  MeasurementConfigWriteVisitor.h  NetworkAdapter.h  Plugin.cpp  Plugin.h  PluginFactory.cpp  ProfileReader.h  PublishingConfigReadVisitor.h
plugins/historian/: CMakeLists.txt  setup.sql
plugins/historian/src/: BusListener.h  IArchiver.h  Message.h  PQConnection.cpp  PQConnection.h  PQResult.cpp  PQResult.h  Plugin.cpp  Plugin.h  PluginFactory.cpp  TimescaleDBArchiver.cpp  TimescaleDBArchiver.h
plugins/iccp/: CMakeLists.txt
plugins/log/: CMakeLists.txt
plugins/log/src/: ConfigKeys.h  DebugLoggerProfileHandler.h  DebugStringLogSubscriber.h  FilteredLoggerProfileHandler.h  FilteredValueLogSubscriber.h  ITagFilter.h  LogArchiveVisitor.h  Plugin.cpp  Plugin.h  PluginBase.h  PluginFactory.cpp  TagFilter.cpp  TagFilter.h
plugins/modbus/: CMakeLists.txt
plugins/modbus/test/: CMakeLists.txt  test_double_word.cpp  test_poll_handler.cpp  test_register_conversions.cpp  test_register_operations.cpp
plugins/mqtt-paho/: CMakeLists.txt
plugins/mqtt-paho/src/: ConfigStrings.h  ITopicHandler.h  MQTTPublisher.h  Plugin.cpp  Plugin.h  PluginFactory.cpp  QueueTypes.h  SubscriptionRegistry.cpp  SubscriptionRegistry.h  TopicHandler.h  TopicName.h  TopicNameSuffix.cpp  TopicNameSuffix.h
plugins/mqtt-paho/test/: CMakeLists.txt  test_topic_name.cpp
plugins/nats/: CMakeLists.txt
plugins/nats/src/: Buffer.h  ConfigStrings.h  Message.h  NATSPublisher.h  (+11 more)
plugins/replay/: CMakeLists.txt
plugins/timescaledb/: CMakeLists.txt  alterTable.sql  setup.sql
plugins/zenoh/: CMakeLists.txt
proto-api/: CMakeLists.txt
schema-util/: CMakeLists.txt
schema-util/src/: Builder.cpp  JSONOutput.h  JSONSchemaPrinter.cpp  JSONSchemaPrinter.h  JSONWriter.cpp  JSONWriter.h  Types.cpp
schema-util/test/: CMakeLists.txt
util/decode-capture/: CMakeLists.txt
(+738 files in other folders)
